@@ -693,6 +693,8 @@ struct
     "compound literals with storage class specifier require ISO C23 or later", 0},
   { W_ENUM_UNDERLYING_BITINT, ERROR_LEVEL_WARNING,
     "enum's underlying type may not be a bit-prcise type in ISO C23", 0},
+  { W_INVALID_BITINTWIDTH_1, ERROR_LEVEL_WARNING,
+    "signed bit-precise integer type may not have width 1 in ISO C23", 0},
 };
 
 /* -------------------------------------------------------------------------------
