@@ -342,6 +342,7 @@ enum {
   E_SELECTION_DECLARATION_C2Y   = 312, /* declaration within selection header requires ISO C2y or later */
   E_COMPLIT_SCLASS_C23          = 313, /* compound literals with storage class specifier require ISO C23 or later */
   W_ENUM_UNDERLYING_BITINT      = 314, /* enum's underlying type may not be a bit-prcise type in ISO C23 */
+  W_INVALID_BITINTWIDTH_1       = 315, /* signed bit-precise integer type may not have width 1 in ISO C23 */
 
   /* don't touch this! */
   NUMBER_OF_ERROR_MESSAGES             /* Number of error messages */
