@@ -690,9 +690,10 @@ checkTypeSanity (sym_link *etype, const char *name)
 
   if (SPEC_NOUN (etype) == V_BITINT)
     {
-      if (SPEC_BITINTWIDTH (etype) > port->s.bitint_maxwidth || // Check that port supports bit-precise integers this wide.
-       SPEC_BITINTWIDTH (etype) < (SPEC_USIGN (etype) ? 1 : 2)) // Check minimum width mandated by standard.
-       werror (E_INVALID_BITINTWIDTH);
+      if (SPEC_BITINTWIDTH (etype) > port->s.bitint_maxwidth || SPEC_BITINTWIDTH (etype) < 1) // Check that port supports bit-precise integers this wide.
+        werror (E_INVALID_BITINTWIDTH);
+      if (SPEC_BITINTWIDTH (etype) == 1 && !SPEC_USIGN (etype) && !options.std_sdcc) // In ISO C23, signed _BitInt needs to have width at least 2.
+        werror (W_INVALID_BITINTWIDTH_1);
     }
 }
 
